avancement remise a jour

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,14 +1,16 @@
-<div class="view">
+<li class="view">
     <input  class = "toggle"
             type  = "checkbox"
             name  = "done"
     />
     <label  class="texte">{{value!.label}}</label>
-    <button class="destroy" (click)="remove">Button</button>
-  </div>
+    <button class="destroy" (click)="removeItem()"></button>
+</li>
   <form>
     <input  #newTextInput
             name      = "newTextInput"
             class     = "edit"
+            [(ngModel)] ="editText"
+            (change)="updateItem()"
     />
   </form>  
